Changed extensions for images

--- a/hdr-details.html
+++ b/hdr-details.html
@@ -93,7 +93,7 @@
 					<span class="text-white">1.	Dimensionality Reduction</span><br>
 					<ul>
 						<p align="center" class="pt-3">
-							<img src="images/project/hdr-2.jpg" width="40%">
+							<img src="images/project/hdr-2.JPG" width="40%">
 						</p>
 						<li>As shown in the graph above, nearly 900 components are required to preserve a close to 100% variance. However, due to the noise in the data, the accuracy of the model significantly dropped. Moreover, since CNN works by convolving the data and reducing the dimensions at each layer, thus an external dimensionality reduction process was discarded</li>
 					</ul>
@@ -101,7 +101,7 @@
 					<span class="text-white">2.	Number of Layers for CNN</span><br>
 					<ul>
 						<p align="center" class="pt-3">
-							<img src="images/project/hdr-3.jpg" width="40%">
+							<img src="images/project/hdr-3.JPG" width="40%">
 						</p>
 						<li>Multiple iterations were performed with different configurations for layers. Most accurate classification was observed with 6 layers</li>
 					</ul>
@@ -112,7 +112,7 @@
 						
 						<li>Model was simulated for 30 epochs to determine the most accurate configuration.</li>
 						<p align="center" class="pt-3">
-							<img src="images/project/hdr-4.jpg" width="40%" ><img src="images/project/hdr-5.jpg" width="40%">
+							<img src="images/project/hdr-4.JPG" width="40%" ><img src="images/project/hdr-5.jpg" width="40%">
 						</p>
 						<li>Since the model has high accuracy at 19 epochs, it was finalized as the optimal configuration.</li>
 					</ul>
@@ -122,7 +122,7 @@
 						
 						<li>Accuracies were compared for source data, MNIST data and combined data to determine the number of data points to be added</li>
 						<p align="center" class="pt-3">
-							<img src="images/project/hdr-6.jpg" width="40%" >
+							<img src="images/project/hdr-6.JPG" width="40%" >
 						</p>
 						<li>Since the highest accuracy is obtained by adding 2000 MNIST data points, it was selected as the optimal configuration.</li>
 					</ul>
