--- a/ra-details.html
+++ b/ra-details.html
@@ -92,7 +92,7 @@
 			<div class="card-heading pl-5 pb-2">
 				<h2 class="font-weight-medium "> <strong>Results</strong></h2>
 				<p align="center" class="pt-3">
-					<img src="images/project/ra-1.png" width="40%"> &nbsp &nbsp <img src="images/project/ra-2.jpg" width="40%">
+					<img src="images/project/ra-1.png" width="40%"> &nbsp &nbsp <img src="images/project/ra-2.JPG" width="40%">
 				</p>
 			</div>
 			
