--- a/twt-details.html
+++ b/twt-details.html
@@ -67,7 +67,7 @@
 					<span class="text-white">Phase 1	:	Mapping out the routes for each functionality.</span><br>
 					<ul>
 						<li>Designed the architecture for the entire ecosystem</li>
-							<p class="pt-2" align="center"><img src="images/project/twt-2.jpg" width="70%" ></p>
+							<p class="pt-2" align="center"><img src="images/project/twt-2.JPG" width="70%" ></p>
 						<li>Tables created in Oracle database and data was imported.</li>
 					</ul>
 					<span class="text-white">Phase 2	:	Data model and database creation</span><br>
@@ -77,7 +77,7 @@
 					<span class="text-white">Phase 3	:	Configure API endpoints</span><br>
 					<ul>
 						<li>Distinguished outputs for server and client processes</li>
-						<p class="pt-2 pb-2" align="center"><img src="images/project/twt-1.jpg" width="70%"  ></p>
+						<p class="pt-2 pb-2" align="center"><img src="images/project/twt-1.JPG" width="70%"  ></p>
 						<li>Decided end point routes for each metric</li>
 						<li>Built APIs for each metric</li>
 					</ul>
