--- a/dad-details.html
+++ b/dad-details.html
@@ -97,12 +97,12 @@
 					<div class="slideshow-container">
 
 						<div class="mySlides fade">
-							  <img src="images/project/dad-1.jpg" style="width:100%">
+							  <img src="images/project/dad-1.JPG" style="width:100%">
 						</div>
 
 						<div class="mySlides fade">
 
-							  <img src="images/project/dad-2.jpg" style="width:100%">
+							  <img src="images/project/dad-2.JPG" style="width:100%">
 						</div>
 
 						<div class="mySlides fade">
