Changed about me

--- a/index.html
+++ b/index.html
@@ -67,8 +67,12 @@
 					<div class="section-heading">
 						<h2>About <strong>Me</strong></h2>
 					</div>
-					<p class="lead">I am a Software Engineer with two years of experience in designing and building scalable software products for data analytics, leading and overseeing fellow associates, and handling client communication</p>
-					<p class="mb-5  ">Currently working on my Masters at University of Florida</p>
+					<p class="lead" style="text-align:justify">I am a <span class="text-white-bold">Software Engineer</span> with <span class="text-white-bold">two years of experience</span> in designing and building scalable software products for data analytics, leading and overseeing fellow associates, and handling client communication. My driving factor is building software solutions which help real customer problems with a business justification. </p>
+					
+					<p class="lead" style="text-align:justify">I am a quick learner with the ability to blend in any work environment. Along with my technical abilties, I have always been a good listener which helps me in inter-personal communication and team collaboration. Opportunities such as leading client presentations, conducting brainstorming and code review sessions have honed my leadership skills. </p>
+					
+					<p class="lead" style="text-align:justify">My work in Back-end domain has helped me gain an expertise in <span class="text-white-bold">algorithm design and relational databases.</span> I love writing code in <span class="text-white-bold">Java, Python and SQL.</span> I am looking forward to working in a software development firm where I can grow professionally.</p>
+					<p class="mb-5" align="center"><i class="fas fa-university mr-2"></i> M.S. in Comp. Sci. at University of Florida</p>
 
 					<p>
 						<a href="#section-contact" class="btn btn-primary px-4 py-2 btn-sm smoothscroll">Contact Me</a>
