Changed github repo lua compiler to lua interpreter

--- a/index.html
+++ b/index.html
@@ -178,14 +178,14 @@
 								<div class="middle card-item">
 									<p style="margin-top:1rem">
 									<a class="btn" href="lc-details.html"><i  class="fas fa-plus font-medium-size"></i></a> &nbsp 
-									<a class="btn" href="https://github.com/ksantosh95/Lua-Compiler"><i  class="fab fa-github font-medium-size"></i></a>
+									<a class="btn" href="https://github.com/ksantosh95/Lua-Interpreter"><i  class="fab fa-github font-medium-size"></i></a>
 									</p>
 								</div>
 							</div>
 							                              
 						</div>
 						<div class="p-inner">
-							<h4>Lua Compiler</h4>
+							<h4>Lua Interpreter</h4>
 							<div class="cat">Java Program</div>
 						</div>
 					</div>
