Added link for bugtracker app

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 								<div class="card-item middle">
 										<p style="margin-top:1rem">
 										<a class="btn" href="bt-details.html"><i  class="fas fa-plus font-medium-size"></i></a> &nbsp 
-										<!--<a class="btn" href="https://bugtracker-stage.herokuapp.com/"><i class="fas fa-link font-medium-size"></i></a> &nbsp -->
+										<a class="btn" href="https://bugtracker-stage.herokuapp.com/"><i class="fas fa-link font-medium-size"></i></a> &nbsp 
 										<a class="btn" href="https://github.com/ksantosh95/BugTracker"><i class="fab fa-github font-medium-size"></i></a></p>
 								</div>
 							</div>
